--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://repo-to-markdown.com">
     <meta property="og:title" content="GitHub Repository to Markdown Converter - AI-Ready Codebase Export">
     <meta property="og:description" content="Convert any GitHub repository into a single Markdown file optimized for AI ingestion. Perfect for feeding codebases to LLMs, code analysis, and documentation. Free online tool with customizable filtering.">
-    <meta property="og:image" content="https://repo-to-markdown.com/og-image.jpg">
+    <meta property="og:image" content="https://repo-to-markdown.com/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Repo to Markdown Converter">
