Add token counting functionality using gpt-tokenizer and display total lines in stats

--- a/src/index.html
+++ b/src/index.html
@@ -333,6 +333,8 @@ bin/
         </section>
     </main>
 
+    <!-- gpt-tokenizer for token counting -->
+    <script src="https://unpkg.com/gpt-tokenizer/dist/o200k_base.js"></script>
     <script src="script.js"></script>
     
     <footer>
