--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,7 @@ bin/
                             <label for="issuesIncludeOpen">Include open issues</label>
                         </div>
                         <div class="checkbox-group">
-                            <input type="checkbox" id="issuesIncludeClosed" checked>
+                            <input type="checkbox" id="issuesIncludeClosed">
                             <label for="issuesIncludeClosed">Include closed issues</label>
                         </div>
                     </fieldset>
