--- a/src/index.html
+++ b/src/index.html
@@ -377,7 +377,9 @@ bin/
                 Transform any GitHub repository into a single, well-formatted Markdown file with our free online converter. 
                 Designed specifically for <strong>AI and machine learning workflows</strong>, this tool makes it easy to feed entire codebases 
                 to <strong>Large Language Models (LLMs)</strong> like ChatGPT, Claude, and other AI systems for code analysis, documentation generation, 
-                and automated code review.
+                and automated code review. Once you have your documentation, you can even convert it to audio using a 
+                <a href="https://online-text-to-speech.com/" target="_blank" style="color: #5d6d7e; text-decoration: none;">Text to Speech Converter</a> 
+                for accessibility or hands-free review.
             </p>
             
             <div class="about-features">
